--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
-html, body{
+html, body {
     height: 100%;
 }
 
+body {
+    background-color: #F8F8F8;
+}
+
 .site-main {
+    background-color: #FFFFFF;
     padding-top: 50px; /* height of header */
     height: 100%;
 }
@@ -12,12 +17,13 @@ html, body{
 }
 
 .site-sidebar {
-    background-color: #f1f1f1;
+    padding-top: 10px;
+    background-color: #F0F0F0;
     height: 100%;
 }
 
 footer {
-    background-color: #555;
+    background-color: #555555;
     color: white;
     padding: 15px;
     width: 100%;
