--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked">
   <li class="active"><a href="#section1">最新信息</a></li>
-  <li><a href="#section2">Friends</a></li>
-  <li><a href="#section3">Family</a></li>
-  <li><a href="#section3">Photos</a></li>
-</ul><br>
+  <li><a href="#section2">主办机构</a></li>
+  <li><a href="#section3">会议赞助</a></li>
+  <li><a href="#section3">报名参会</a></li>
+</ul>
