--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked">
   <li class="active"><a href="#section1">Latest News</a></li>
-  <li><a href="#section2">Friends</a></li>
-  <li><a href="#section3">Family</a></li>
-  <li><a href="#section3">Photos</a></li>
+  <li><a href="#section2">Organization</a></li>
+  <li><a href="#section3">Sponsors</a></li>
+  <li><a href="#section3">Registration</a></li>
 </ul><br>
