--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
 
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">首页</a></li>
-          <li><a href="#">English</a></li>
+          <li class="active"><a href="{{ "/" | prepend: site.baseurl }}">首页</a></li>
+          <li><a href="{{ "/en/" | prepend: site.baseurl }}">English</a></li>
         </ul>
       </div>
 
