--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -1,6 +1,6 @@
-<ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="#section1">最新信息</a></li>
-  <li><a href="#section2">主办机构</a></li>
-  <li><a href="#section3">会议赞助</a></li>
-  <li><a href="#section3">报名参会</a></li>
-</ul>
+<div class="list-group">
+  <a href="#" class="list-group-item active">最新信息</a>
+  <a href="#" class="list-group-item">主办机构</a>
+  <a href="#" class="list-group-item">会议赞助</a>
+  <a href="#" class="list-group-item">报名参会</a>
+</div>
