--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -1,6 +1,6 @@
-<ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="#section1">Latest News</a></li>
-  <li><a href="#section2">Organization</a></li>
-  <li><a href="#section3">Sponsors</a></li>
-  <li><a href="#section3">Registration</a></li>
-</ul><br>
+<div class="list-group">
+  <a href="#" class="list-group-item active">Latest News<</a>
+  <a href="#" class="list-group-item">Organization</a>
+  <a href="#" class="list-group-item">Sponsors</a>
+  <a href="#" class="list-group-item">Registration</a>
+</div>
