--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,21 @@ html, body {
 }
 
 body {
-    background-color: #F8F8F8;
+    background-color: #F0F0F0;
 }
 
 .site-main {
-    background-color: #FFFFFF;
+    background-color: #F9F9F9;
     padding-top: 50px; /* height of header */
-    height: 100%;
-}
-
-.site-main div.row {
-    height: 100%;
+    padding-bottom: 50px;
 }
 
 .site-sidebar {
     padding-top: 30px;
-    padding-left: 0;
-    padding-right: 0;
-    background-color: #F0F0F0;
-    height: 100%;
 }
 
-.nav-pills > li > a {
+.list-group-item:first-child,
+.list-group-item:last-child {
     border-radius: 0;
 }
 
@@ -38,6 +31,6 @@ footer {
     padding: 15px;
     width: 100%;
     height: 50px;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    margin-top: -50px;
 }
