--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background-color: #F9F9F9;
     padding-top: 50px; /* height of header */
     padding-bottom: 50px;
+    min-height: 100%;
 }
 
 .site-sidebar {
