--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 html, body {
     height: 100%;
 }
 
 body {
+    font-family: "Open Sans", Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
     background-color: #F0F0F0;
 }
 
