--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-  <a href="{{ '/en/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/en/' %} active {% endif %}">Latest News</a>
+  <a href="{{ '/en/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/en/' | prepend: site.baseurl %} active {% endif %}">Latest News</a>
   <a href="{{ '/en/organization.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/organization.html' %} active {% endif %}">Organization</a>
   <a href="{{ '/en/sponsors.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/sponsors.html' %} active {% endif %}">Sponsors</a>
   <a href="#" class="list-group-item">Registration</a>
