--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
 
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li {% if page.url == '/' | prepend: site.baseurl %} class="active" {% endif %}><a href="{{ '/' | prepend: site.baseurl }}">首页{{page.url}}#{{'/' | prepend: site.baseurl}}#</a></li>
-          <li {% if page.url == '/en/' | prepend: site.baseurl %} class="active" {% endif %}><a href="{{ '/en/' | prepend: site.baseurl }}">English</a></li>
+          <li {% if page.url == '/index.html' %} class="active" {% endif %}><a href="{{ '/' | prepend: site.baseurl }}">首页</a></li>
+          <li {% if page.url == '/en/index.html' %} class="active" {% endif %}><a href="{{ '/en/' | prepend: site.baseurl }}">English</a></li>
         </ul>
       </div>
 
