--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-  <a href="{{ '/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/' | prepend: site.baseurl %} active {% endif %}">最新信息</a>
+  <a href="{{ '/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/index.html' %} active {% endif %}">最新信息</a>
   <a href="{{ '/organization.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'organization.html' %} active {% endif %}">主办机构</a>
   <a href="{{ '/sponsors.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'sponsors.html' %} active {% endif %}">会议赞助</a>
   <a href="#" class="list-group-item">报名参会</a>
