--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,14 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li {% if page.url == '/index.html' %} class="active" {% endif %}><a href="{{ '/' | prepend: site.baseurl }}">首页</a></li>
