--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -1,6 +1,18 @@
 <div class="list-group">
-  <a href="{{ '/en/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/en/index.html' %} active {% endif %}">Latest News</a>
-  <a href="{{ '/en/organization.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/organization.html' %} active {% endif %}">Organization</a>
-  <a href="{{ '/en/sponsors.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/sponsors.html' %} active {% endif %}">Sponsors</a>
-  <a href="#" class="list-group-item">Registration</a>
+  <a href="{{ '/en/' | prepend: site.baseurl }}" class="list-group-item {% if page.url == '/en/index.html' %} active {% endif %}">
+    <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>&nbsp;
+    Latest News
+  </a>
+  <a href="{{ '/en/organization.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/organization.html' %} active {% endif %}">
+    <span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp;
+    Organization
+  </a>
+  <a href="{{ '/en/sponsors.html' | prepend: site.baseurl }}" class="list-group-item {% if page.url contains 'en/sponsors.html' %} active {% endif %}">
+    <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>&nbsp;
+    Sponsors
+  </a>
+  <a href="#" class="list-group-item">
+    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;
+    Registration
+  </a>
 </div>
