--- a/_layouts/page-cn.html
+++ b/_layouts/page-cn.html
@@ -2,10 +2,16 @@
 layout: default
 ---
 
-<article class="post">
+<article>
 
   <div class="site-page">
-    {{ content }}
+    <div class="page-header">
+      <h2>{{ page.title }}</h2>
+    </div>
+
+    <div class="well">
+      {{ content }}
+    </div>
   </div>
 
 </article>
