--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 
 html, body {
     height: 100%;
+    background-color: #FFFFFF;
 }
 
 body {
     font-family: "Open Sans", Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-    background-color: #F0F0F0;
+    line-height: 1.5;
 }
 
 .site-main {
-    background-color: #F9F9F9;
     padding-top: 50px; /* height of header */
-    padding-bottom: 50px;
+    padding-bottom: 100px;
     min-height: 100%;
 }
 
@@ -26,15 +26,23 @@ body {
 }
 
 .site-page {
-    padding: 10px;
+    padding: 10px 30px;
+}
+
+.site-page .well {
+    border-radius: 0;
+    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
+    background-color: #FFFFFF;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 footer {
-    background-color: #555555;
-    color: white;
+    background-color: #E8E5CE;
+    color: #686758;
     padding: 15px;
     width: 100%;
-    height: 50px;
+    height: 70px;
     position: relative;
-    margin-top: -50px;
+    margin-top: -70px;
 }
