--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -11,7 +11,7 @@
     <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>&nbsp;
     Sponsors
   </a>
-  <a href="#" class="list-group-item">
+  <a href="http://china-r-beijing2016.eventdove.com/" class="list-group-item">
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;
     Registration
   </a>
