--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -11,7 +11,7 @@
     <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>&nbsp;
     会议赞助
   </a>
-  <a href="#" class="list-group-item">
+  <a href="http://china-r-beijing2016.eventdove.com/" class="list-group-item">
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;
     报名参会
   </a>
