--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -16,3 +16,17 @@
     报名参会
   </a>
 </div>
+
+<div class="panel panel-primary">
+  <div class="panel-heading"><strong>重要日期</strong></div>
+  <div class="panel-body">
+    <h4>1 月 1 日</h4>
+    <p>开放注册</p>
+    <h4>3 月 1 日</h4>
+    <p>摘要提交截止</p>
+    <h4>3 月 30 日</h4>
+    <p>注册截止</p>
+    <h4>5 月 27 日至 29 日</h4>
+    <p>会议召开</p>
+  </div>
+</div>
