--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -16,3 +16,17 @@
     Registration
   </a>
 </div>
+
+<div class="panel panel-primary">
+  <div class="panel-heading"><strong>Key Dates</strong></div>
+  <div class="panel-body">
+    <h4>January 1</h4>
+    <p>Registration Opens</p>
+    <h4>March 1</h4>
+    <p>Abstract Submission Deadline</p>
+    <h4>March 30</h4>
+    <p>Registration Deadline</p>
+    <h4>May 27-29</h4>
+    <p>Meeting Dates</p>
+  </div>
+</div>
