--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -18,7 +18,10 @@
 </div>
 
 <div class="panel panel-primary">
-  <div class="panel-heading"><strong>重要日期</strong></div>
+  <div class="panel-heading">
+    <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
+    <strong>重要日期</strong>
+  </div>
   <div class="panel-body">
     <h4>1 月 1 日</h4>
     <p>开放注册</p>
