--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -18,7 +18,10 @@
 </div>
 
 <div class="panel panel-primary">
-  <div class="panel-heading"><strong>Key Dates</strong></div>
+  <div class="panel-heading">
+    <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
+    <strong>Key Dates</strong>
+  </div>
   <div class="panel-body">
     <h4>January 1</h4>
     <p>Registration Opens</p>
