--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+/*@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);*/
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), local('OpenSans'), url(../fonts/open-sans-400.woff2) format('woff2');
+}
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Open Sans Bold'), local('OpenSans-Bold'), url(../fonts/open-sans-700.woff2) format('woff2');
+}
 
 html, body {
     height: 100%;
@@ -8,6 +20,7 @@ html, body {
 body {
     font-family: "Open Sans", Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
     line-height: 1.5;
+    font-size: 14px;
 }
 
 .site-main {
