--- a/_includes/sidebar-cn.html
+++ b/_includes/sidebar-cn.html
@@ -20,7 +20,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
-    <strong>重要日期</strong>
+    重要日期
   </div>
   <div class="panel-body">
     <h4>1 月 1 日</h4>
