--- a/_includes/sidebar-en.html
+++ b/_includes/sidebar-en.html
@@ -20,7 +20,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
-    <strong>Key Dates</strong>
+    Key Dates
   </div>
   <div class="panel-body">
     <h4>January 1</h4>
