add weixin icon

--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -4,6 +4,9 @@
   {% include head.html %}
 
   <body>
+      <div id='wx_logo' style='display:none;'>
+        <img src='/img/cos-logo-300x300.png' />
+      </div>
 
     {% include header.html %}
 
