--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
   {% include head.html %}
 
   <body>
-
+    <div id='wx_logo' style='display:none;'>
+     <img src='/img/cos-logo-300x300.png' />
+    </div>
+    
     {% include header.html %}
 
     <div class="container site-main">
