replace cos log 300x300

--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -5,7 +5,7 @@
 
   <body>
       <div id='wx_logo' style='display:none;'>
-        <img src='/img/cos-logo-300x300.png' />
+        <img src='/img/cos-logo-300x300.jpg' />
       </div>
 
     {% include header.html %}
